# thermal_watcher

./: Cargo.toml  License  thermal_watcher
src/: main.rs
