[package]
name = "thermal_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
debug = true
panic = "abort"
codegen-units = 1
strip = true

[dependencies]
clearscreen = "2"
smol = "1.3.0"
